--- a/app/favorites.html
+++ b/app/favorites.html
@@ -48,7 +48,7 @@
                 <a href="#">О нас</a>
               </li>
               <li>
-                <a href="#">Доставка и оплата</a>
+                <a href="./delivery.html">Доставка и оплата</a>
               </li>
               <li>
                 <a href="#">Каталог</a>
@@ -57,10 +57,10 @@
                 <a href="./valves.html">Задвижки</a>
               </li>
               <li>
-                <a href="#">Клапаны </a>
+                <a href="./valve.html">Клапаны </a>
               </li>
               <li>
-                <a href="#">Контакты</a>
+                <a href="./contacts.html">Контакты</a>
               </li>
             </ul>
           </nav>
