--- a/app/valve.html
+++ b/app/valve.html
@@ -48,7 +48,7 @@
                 <a href="#">О нас</a>
               </li>
               <li>
-                <a href="#">Доставка и оплата</a>
+                <a href="./delivery.html">Доставка и оплата</a>
               </li>
               <li>
                 <a href="#">Каталог</a>
@@ -60,7 +60,7 @@
                 <a href="#">Клапаны </a>
               </li>
               <li>
-                <a href="#">Контакты</a>
+                <a href="./contacts.html">Контакты</a>
               </li>
             </ul>
           </nav>
