--- a/app/delivery.html
+++ b/app/delivery.html
@@ -51,7 +51,7 @@
                 <a href="#">Доставка и оплата</a>
               </li>
               <li>
-                <a href="#">Каталог</a>
+                <a href="./catalog.html">Каталог</a>
               </li>
               <li>
                 <a href="./valves.html">Задвижки</a>
